--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "homepage": "https://www.folsom-prism.com",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
@@ -10,6 +10,7 @@
     "core-js": "^3.27.0",
     "emailjs-com": "^3.2.0",
     "netlify-cli": "^10.18.0",
+    "node": "^19.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
