--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node": "^19.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-download-link": "^2.3.0",
     "react-icons": "^4.4.0",
     "react-scripts": "^5.0.1",
     "swiper": "^8.3.2",
